# ChangeLog for media-libs/amrnb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/amrnb/ChangeLog,v 1.24 2008/05/25 09:03:07 aballier Exp $

  25 May 2008; Alexis Ballier <aballier@gentoo.org> amrnb-7.0.0.0.ebuild:
  keyword ~x86-fbsd

  06 May 2008; Samuli Suominen <drac@gentoo.org> amrnb-7.0.0.0.ebuild:
  Set empty RDEPEND since app-arch/unzip is only needed at build-time.

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> amrnb-7.0.0.0.ebuild:
  alpha/ia64/sparc stable wrt #198788

  14 Nov 2007; Jeroen Roovers <jer@gentoo.org> amrnb-7.0.0.0.ebuild:
  Stable for HPPA (bug #198788).

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> amrnb-7.0.0.0.ebuild:
  Stable on ppc64; bug #198788

  11 Nov 2007; Markus Meier <maekke@gentoo.org> amrnb-7.0.0.0.ebuild:
  x86 stable, bug #198788

  11 Nov 2007; nixnut <nixnut@gentoo.org> amrnb-7.0.0.0.ebuild:
  Stable on ppc wrt bug 198788

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> amrnb-7.0.0.0.ebuild:
  amd64 stable wrt #198788

  15 Oct 2007; Tom Gall <tgall@gentoo.org> amrnb-6.1.0.4.ebuild:
  stable on ppc64

  24 Sep 2007; Raúl Porcel <armin76@gentoo.org> amrnb-6.1.0.4.ebuild:
  ia64 stable

*amrnb-7.0.0.0 (07 Sep 2007)

  07 Sep 2007; Samuli Suominen <drac@gentoo.org> +amrnb-7.0.0.0.ebuild:
  Version bump.

  11 Aug 2007; Jose Luis Rivero <yoswink@gentoo.org> amrnb-6.1.0.3.ebuild:
  Stable on alpha

*amrnb-6.1.0.4 (08 Aug 2007)

  08 Aug 2007; Samuli Suominen <drac@gentoo.org> +amrnb-6.1.0.4.ebuild:
  Version bump.

  28 Jun 2007; Raúl Porcel <armin76@gentoo.org> amrnb-6.1.0.3.ebuild:
  Add ~alpha/~ia64

  28 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
  ppc stable, bug #181097

  25 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> amrnb-6.1.0.3.ebuild:
  Stable on sparc

  25 Jun 2007; Raúl Porcel <armin76@gentoo.org> amrnb-6.1.0.3.ebuild:
  x86 stable wrt #181097
