@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/amrnb
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/amrnb/ChangeLog,v 1.24 2008/05/25 09:03:07 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/amrnb/ChangeLog,v 1.25 2008/06/29 18:03:11 drac Exp $
+
+*amrnb-7.0.0.2 (29 Jun 2008)
+
+  29 Jun 2008; Samuli Suominen <drac@gentoo.org> +amrnb-7.0.0.2.ebuild:
+  Version bump.
 
   25 May 2008; Alexis Ballier <aballier@gentoo.org> amrnb-7.0.0.0.ebuild:
   keyword ~x86-fbsd
